# txt_processor

./: Cargo.toml  README.md
src/: lib.rs  processor.rs
src/examples/: add_text.rs  file.rs  file.txt  filter.rs  fix.rs
