[package]
name = "TxtProcessor"
version = "0.1.0"
license = "MIT"
author = "Daniil Volkov"
description = "A little library for text processing"
documentation = "https://docs.rs/TxtProcessor"
readme = "README.md"
keywords = ["text processing"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.11.0"
regex = "*"