[package]
name = "txt_processor"
version = "0.1.4"
license = "MIT"
author = "Daniil Volkov"
description = "A little library for text processing"
homepage = "https://github.com/DaniilUbica/txt_processor"
repository = "https://github.com/DaniilUbica/txt_processor"
documentation = "https://docs.rs/txt_processor"
readme = "README.md"
categories = ["text"]
keywords = ["text-processing"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.11.0"
regex = "1.8.4"